--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "singleAttributePerLine": false,
     "htmlWhitespaceSensitivity": "css",
     "printWidth": 80,
-    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"],
+    "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss", "@prettier/plugin-php"],
     "tailwindFunctions": ["clsx", "cn"],
     "tailwindStylesheet": "resources/css/app.css",
     "tabWidth": 2,
@@ -16,4 +16,5 @@
             }
         }
     ],
+  "parser": "php"
 }
