--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.7.2",
+        "use-debounce": "^10.0.6",
         "vite": "^7.0.4"
     },
     "optionalDependencies": {
