--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.0",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-checkbox": "^1.3.3",
         "@radix-ui/react-label": "^2.1.8",
+        "@radix-ui/react-radio-group": "^1.3.8",
+        "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
         "@tailwindcss/vite": "^4.1.11",
         "@types/react": "^19.0.3",
